tests/fail/ayrıştırma-hatası.kip
Bir doğal-sayı
ya sıfır
ya da bir doğal-sayının ardılı
olabilir

sıfırın ardılına bir diyelim.
